**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-12

* bam can now compute the leading order QR decomposition on a cluster
  set up using the parallel package.

* Greater use of BLAS routines in the underlying method code. In particular 
  all leading order operations count steps for gam fitting now use BLAS. 
  You'll need R to be using a rather fancy BLAS to see much difference, 
  however. 

* Amusingly, some highly tuned blas libraries can result in lapack not always 
  giving identical eigenvalues when called twice with the same matrix. The 
  `newton' optimizer had assumed this wouldn't happen: not any more.

* Now byte compiled by default. Turn this off in DESCRIPTION if it interferes
  with debugging.
 
* summary.gam p-value computation options modified (default remains the 
  same).

* summary.gam default p-value computation made more computationally 
  efficient.

* gamm and bam could fail under some options for specifying binomial models.
  Now fixed.

1.7-11

* smoothCon bug fix to avoid NA labels for matrix arguments when 
  no by variable provided. 

* modification to p-value computation in summary.gam: `alpha' argument 
  removed (was set to zero anyway); computation now deals with possibility
  of rank deficiency computing psuedo-inverse of cov matrix for statistic. 
  Previously p-value computation could fail for random effect smooths with 
  large datasets, when a random effect has many levels. Also for large data
  sets test statistic is now based on randomly sampling max(1000,np*2) model
  matrix rows, where np is number of model coefficients (random number 
  generator state unchanged by this), previous sample size was 3000. 

* plot.mrf.smooth modified to allow passing '...' argument.

* 'negbin' modified to avoid spurious warnings on initialization call.

1.7-10

* fix stupid bug in 1.7-9 that lost term labels in plot.gam.

1.7-9

* rather lovely plot method added for splines on the sphere.
